--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/style.css" />
-		<title>RealEstate</title>
+		<title>SmartSpace</title>
 	</head>
 	<body>
+		<div class="wrapper">
+			<header class="header">
+				<div class="header__container">
+					<a href="index.html" class="header__logo">SmartSpace</a>
+					<div class="header__menu menu">
+						<button type="button" class="menu__icon icon-menu">
+							<span></span>
+						</button>
+						<nav class="menu__body">
+							<ul class="menu__list">
+								<li class="menu__item">
+									<a href="#" class="menu__link">Home</a>
+								</li>
+								<li class="menu__item">
+									<a href="#" class="menu__link">About</a>
+								</li>
+								<li class="menu__item">
+									<a href="#" class="menu__link">Service</a>
+								</li>
+								<li class="menu__item">
+									<a href="#" class="menu__link">Portfolio</a>
+								</li>
+								<li class="menu__item">
+									<a href="#" class="menu__link">Blog</a>
+								</li>
+								<li class="menu__item">
+									<a href="#" class="menu__link">Contact</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</header>
+			<main class="page"></main>
+			<footer class="footer"></footer>
+		</div>
 		<script src="js/script.js"></script>
 	</body>
 </html>
