Created and adapted main-block

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+		/>
 		<link rel="stylesheet" href="css/style.css" />
 		<title>SmartSpace</title>
 	</head>
@@ -40,9 +44,114 @@
 					</div>
 				</div>
 			</header>
-			<main class="page"></main>
+			<main class="page">
+				<section class="page__main-screen main-screen">
+					<div class="main-screen__container">
+						<div class="main-screen__body body-main-screen">
+							<div class="body-main-screen__content">
+								<div class="body-main-screen__inner">
+									<div class="body-main-screen__label">
+										RESIDENTIAL & OFFICE SPACES
+									</div>
+									<h1 class="body-main-screen__title">
+										Smart Living Style for Smart People
+									</h1>
+									<div class="body-main-screen__text">
+										<p>
+											Much did had call new drew that kept. Limits expect wonder
+											law she. Now has you views woman noisy match money rooms.
+										</p>
+									</div>
+								</div>
+								<form action="#" class="body-main-screen__form">
+									<input
+										type="text"
+										class="body-main-screen__input"
+										placeholder="Enter Zipcode to search properties"
+										required
+									/>
+									<button type="submit" class="body-main-screen__btn">
+										Search Now!
+									</button>
+								</form>
+							</div>
+							<div class="body-main-screen__swiper swiper">
+								<div class="body-main-screen__swiper-wrapper swiper-wrapper">
+									<div class="body-main-screen__swiper-slide swiper-slide">
+										<img
+											src="img/main-screen/main-sccreen_slider_1.jpg"
+											alt="The first image of slider"
+										/>
+									</div>
+									<div class="body-main-screen__swiper-slide swiper-slide">
+										<img
+											src="img/main-screen/main-screen_slider_2.jpg"
+											alt="The second image of slider"
+										/>
+									</div>
+								</div>
+							</div>
+							<div class="body-main-screen__arrows">
+								<div class="body-main-screen__arrow swiper-button-prev"></div>
+								<div class="body-main-screen__arrow swiper-button-next"></div>
+							</div>
+						</div>
+						<div class="main-screen__partners partners-main-screen">
+							<div class="partners-main-screen__label">
+								Our Amazing Partners
+							</div>
+							<div class="partners-main-screen__items">
+								<div class="partners-main-screen__item">
+									<img
+										src="img/main-screen/main-screen_partners_1.svg"
+										alt="partners 1"
+										class="partners-main-screen__img"
+									/>
+								</div>
+								<div class="partners-main-screen__item">
+									<img
+										src="img/main-screen/main-screen_partners_2.svg"
+										alt="partners 2"
+										class="partners-main-screen__img"
+									/>
+								</div>
+								<div class="partners-main-screen__item">
+									<img
+										src="img/main-screen/main-screen_partners_3.svg"
+										alt="partners 3"
+										class="partners-main-screen__img"
+									/>
+								</div>
+								<div class="partners-main-screen__item">
+									<img
+										src="img/main-screen/main-screen_partners_4.svg"
+										alt="partners 4"
+										class="partners-main-screen__img"
+									/>
+								</div>
+								<div class="partners-main-screen__item">
+									<img
+										src="img/main-screen/main-screen_partners_5.svg"
+										alt="partners 5"
+										class="partners-main-screen__img"
+									/>
+								</div>
+								<div class="partners-main-screen__item">
+									<img
+										src="img/main-screen/main-screen_partners_6.svg"
+										alt="partners 6"
+										class="partners-main-screen__img"
+									/>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+			</main>
 			<footer class="footer"></footer>
 		</div>
+
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 </html>
