added section how

--- a/index.html
+++ b/index.html
@@ -147,6 +147,49 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__how how">
+					<div class="how__container">
+						<h2 class="how__title title">How it works?</h2>
+						<div class="how__body">
+							<div class="how__item item-how">
+								<div class="item-how__icon item-how__icon--violet">
+									<img src="icons/search.svg" alt="Search icon" />
+								</div>
+								<h4 class="item-how__title">Research Suburbs</h4>
+								<div class="item-how__text">
+									<p>
+										Wonder twenty hunted and put income set desire expect. Am
+										cottage calling.
+									</p>
+								</div>
+							</div>
+							<div class="how__item item-how">
+								<div class="item-how__icon item-how__icon--blue">
+									<img src="icons/valuation.svg" alt="Valuation icon" />
+								</div>
+								<h4 class="item-how__title">Instant Valuation</h4>
+								<div class="item-how__text">
+									<p>
+										Conveying or northward offending admitting perfectly my.
+										Colonel gravit and moonlight.
+									</p>
+								</div>
+							</div>
+							<div class="how__item item-how">
+								<div class="item-how__icon item-how__icon--pink">
+									<img src="icons/property.svg" alt="Property icon" />
+								</div>
+								<h4 class="item-how__title">Track Property</h4>
+								<div class="item-how__text">
+									<p>
+										Moderate children at of outweigh it. Unsatiable it
+										considered invitation he travelling insensible.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			<footer class="footer"></footer>
 		</div>
