Created and adapted deals and features blocks

--- a/index.html
+++ b/index.html
@@ -79,14 +79,26 @@
 								<div class="body-main-screen__swiper-wrapper swiper-wrapper">
 									<div class="body-main-screen__swiper-slide swiper-slide">
 										<img
-											src="img/main-screen/main-sccreen_slider_1.jpg"
+											srcset="
+												img/main-screen/main-screen_slider-1_2x.jpg 2x,
+												img/main-screen/main-screen_slider-1_3x.jpg 3x
+											"
+											src="img/main-screen/main-screen_slider-1.jpg"
 											alt="The first image of slider"
+											width="603"
+											height="573"
 										/>
 									</div>
 									<div class="body-main-screen__swiper-slide swiper-slide">
 										<img
-											src="img/main-screen/main-screen_slider_2.jpg"
+											srcset="
+												img/main-screen/main-screen_slider-2_2x.jpg 2x,
+												img/main-screen/main-screen_slider-2_3x.jpg 3x
+											"
+											src="img/main-screen/main-screen_slider-2.jpg"
 											alt="The second image of slider"
+											width="603"
+											height="573"
 										/>
 									</div>
 								</div>
@@ -162,6 +174,7 @@
 										cottage calling.
 									</p>
 								</div>
+								<!-- <div class="item-how__line"><span></span><span></span></div> -->
 							</div>
 							<div class="how__item item-how">
 								<div class="item-how__icon item-how__icon--blue">
@@ -174,6 +187,9 @@
 										Colonel gravit and moonlight.
 									</p>
 								</div>
+								<!-- <div class="item-how__line item-how__line--rotate">
+									<span></span><span></span>
+								</div> -->
 							</div>
 							<div class="how__item item-how">
 								<div class="item-how__icon item-how__icon--pink">
@@ -186,6 +202,354 @@
 										considered invitation he travelling insensible.
 									</p>
 								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="page__deals deals">
+					<div class="deals__container">
+						<div class="deals__header header-deals">
+							<div class="header-deals__inner">
+								<h2 class="header-deals__title title">
+									Best Real Estate Deals
+								</h2>
+								<div class="header-deals__text">
+									<p>
+										Colonel gravity get thought fat smiling add but. Wonder
+										twenty hunted and put income set desire expect.
+									</p>
+								</div>
+							</div>
+							<a href="#" class="header-deals__btn">View All Property</a>
+						</div>
+						<div class="deals__tabs tabs-deals">
+							<nav class="tabs-deals__navigation">
+								<button type="button" class="tabs-deals__title _tab-active">
+									Residential Property
+								</button>
+								<button type="button" class="tabs-deals__title">
+									Commercial Property
+								</button>
+								<button type="button" class="tabs-deals__title">
+									Agriculture Property
+								</button>
+								<button type="button" class="tabs-deals__title">
+									Industrial Property
+								</button>
+							</nav>
+							<div class="tabs-deals__content">
+								<div class="tabs-deals__body active">
+									<div class="tabs-deals__items">
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+												<a href="#" class="tabs-deals__option">3D</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-1_2x.jpg 2x,
+														img/deals/deals-1_3x.jpg 3x
+													"
+													src="img/deals/deals-1.jpg"
+													alt="deals 1"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+												<a href="#" class="tabs-deals__option">3D</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-2_2x.jpg 2x,
+														img/deals/deals-2_3x.jpg 3x
+													"
+													src="img/deals/deals-2.jpg"
+													alt="deals 2"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-3_2x.jpg 2x,
+														img/deals/deals-3_3x.jpg 3x
+													"
+													src="img/deals/deals-3.jpg"
+													alt="deals 3"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="tabs-deals__body">
+									<div class="tabs-deals__items">
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+												<a href="#" class="tabs-deals__option">3D</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-1_2x.jpg 2x,
+														img/deals/deals-1_3x.jpg 3x
+													"
+													src="img/deals/deals-1.jpg"
+													alt="deals 1"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+												<a href="#" class="tabs-deals__option">3D</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-2_2x.jpg 2x,
+														img/deals/deals-2_3x.jpg 3x
+													"
+													src="img/deals/deals-2.jpg"
+													alt="deals 2"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-3_2x.jpg 2x,
+														img/deals/deals-3_3x.jpg 3x
+													"
+													src="img/deals/deals-3.jpg"
+													alt="deals 3"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="tabs-deals__body">
+									<div class="tabs-deals__items">
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+												<a href="#" class="tabs-deals__option">3D</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-1_2x.jpg 2x,
+														img/deals/deals-1_3x.jpg 3x
+													"
+													src="img/deals/deals-1.jpg"
+													alt="deals 1"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+												<a href="#" class="tabs-deals__option">3D</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-2_2x.jpg 2x,
+														img/deals/deals-2_3x.jpg 3x
+													"
+													src="img/deals/deals-2.jpg"
+													alt="deals 2"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-3_2x.jpg 2x,
+														img/deals/deals-3_3x.jpg 3x
+													"
+													src="img/deals/deals-3.jpg"
+													alt="deals 3"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="tabs-deals__body">
+									<div class="tabs-deals__items">
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+												<a href="#" class="tabs-deals__option">3D</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-1_2x.jpg 2x,
+														img/deals/deals-1_3x.jpg 3x
+													"
+													src="img/deals/deals-1.jpg"
+													alt="deals 1"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+												<a href="#" class="tabs-deals__option">3D</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-2_2x.jpg 2x,
+														img/deals/deals-2_3x.jpg 3x
+													"
+													src="img/deals/deals-2.jpg"
+													alt="deals 2"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+										<div class="tabs-deals__item">
+											<div class="tabs-deals__options">
+												<a href="#" class="tabs-deals__option">Featured</a>
+											</div>
+											<a href="#" class="tabs-deals__pictures">
+												<img
+													class="tabs-deals__img"
+													srcset="
+														img/deals/deals-3_2x.jpg 2x,
+														img/deals/deals-3_3x.jpg 3x
+													"
+													src="img/deals/deals-3.jpg"
+													alt="deals 3"
+													width="370"
+													height="300"
+												/>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="page__features features">
+					<div class="features__container">
+						<h2 class="features__title title">Featured Listing of the Week</h2>
+						<div class="features__body">
+							<div class="features__pictures">
+								<div class="features__picture">
+									<img
+										class="features__img"
+										srcset="
+											img/features/features-1_2x.jpg 2x,
+											img/features/features-1_3x.jpg 3x
+										"
+										src="img/features/features-1.jpg"
+										alt="features 1"
+									/>
+								</div>
+								<img
+									class="features__img"
+									srcset="
+										img/features/features-2_2x.jpg 2x,
+										img/features/features-2_3x.jpg 3x
+									"
+									src="img/features/features-2.jpg"
+									alt="features 2"
+								/>
+							</div>
+							<div class="features__content content-features">
+								<div class="content-features__header">
+									<h3 class="content-features__title">
+										The and collecting for the motionless difficulty son.
+									</h3>
+									<div class="content-features__text">
+										<p>
+											Conveying or northward offending admitting perfectly my.
+											Colonel gravity get thought fat smiling add but difficult
+											situations.
+										</p>
+									</div>
+								</div>
+								<div class="content-features__body">
+									<div class="content-features__item item-features">
+										<div class="item-features__name">Budget</div>
+										<div class="item-features__value">Confidential</div>
+									</div>
+									<div class="content-features__item item-features">
+										<div class="item-features__name">Size</div>
+										<div class="item-features__value">1200 m2</div>
+									</div>
+									<div class="content-features__item item-features">
+										<div class="item-features__name">Type</div>
+										<div class="item-features__value">Office</div>
+									</div>
+									<div class="content-features__item item-features">
+										<div class="item-features__name">Status</div>
+										<div class="item-features__value">Done</div>
+									</div>
+									<div class="content-features__item item-features">
+										<div class="item-features__name">Location</div>
+										<div class="item-features__value">Switzerland</div>
+									</div>
+									<div class="content-features__item item-features">
+										<div class="item-features__name">Flat</div>
+										<div class="item-features__value">8 Room</div>
+									</div>
+								</div>
+								<button type="button" class="content-features__btn">
+									YES! I WANT BOOK “OFFICE PACKAGE”
+								</button>
 							</div>
 						</div>
 					</div>
