created and adapted reviews and featured blocks

--- a/index.html
+++ b/index.html
@@ -498,15 +498,17 @@
 										alt="features 1"
 									/>
 								</div>
-								<img
-									class="features__img"
-									srcset="
-										img/features/features-2_2x.jpg 2x,
-										img/features/features-2_3x.jpg 3x
-									"
-									src="img/features/features-2.jpg"
-									alt="features 2"
-								/>
+								<div class="features__picture">
+									<img
+										class="features__img"
+										srcset="
+											img/features/features-2_2x.jpg 2x,
+											img/features/features-2_3x.jpg 3x
+										"
+										src="img/features/features-2.jpg"
+										alt="features 2"
+									/>
+								</div>
 							</div>
 							<div class="features__content content-features">
 								<div class="content-features__header">
@@ -552,6 +554,165 @@
 								</button>
 							</div>
 						</div>
+					</div>
+				</section>
+				<section class="page__reviews reviews">
+					<div class="reviews__container">
+						<h2 class="reviews__title title">
+							Loved by businesses, and individuals across the globe.
+						</h2>
+						<div class="reviews__body">
+							<div class="reviews__item item-reviews">
+								<div class="item-reviews__stars">
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+								</div>
+								<div class="item-reviews__text">
+									<p>
+										Moderate children at of outweigh it. Unsatiable it
+										considered invitation he travelling insensible. Consulted
+										admitting oh mr up as described.
+									</p>
+								</div>
+								<div class="item-reviews__user user-reviews">
+									<div class="user-reviews__img">
+										<img
+											src="img/reviews/reviews-1.jpg"
+											alt="reviews number 1"
+										/>
+									</div>
+									<div class="user-reviews__content">
+										<div class="user-reviews__name">Jane Cooper</div>
+										<div class="user-reviews__place">Los Angeles, CA</div>
+									</div>
+								</div>
+							</div>
+							<div class="reviews__item item-reviews">
+								<div class="item-reviews__stars">
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+								</div>
+								<div class="item-reviews__text">
+									<p>
+										The and collecting motionless difficulty son. His hearing
+										staying ten colonel met. Sex drew six easy four dear cold
+									</p>
+								</div>
+								<div class="item-reviews__user user-reviews">
+									<div class="user-reviews__img">
+										<img
+											src="img/reviews/reviews-2.jpg"
+											alt="reviews number 2"
+										/>
+									</div>
+									<div class="user-reviews__content">
+										<div class="user-reviews__name">Robert Fox</div>
+										<div class="user-reviews__place">New York City, NY</div>
+									</div>
+								</div>
+							</div>
+							<div class="reviews__item item-reviews">
+								<div class="item-reviews__stars">
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+									<img src="icons/star.svg" alt="star" />
+								</div>
+								<div class="item-reviews__text">
+									<p>
+										Sociable on as carriage my position weddings raillery
+										consider. Peculiar trifling absolute and wandered vicinity
+										property yet.
+									</p>
+								</div>
+								<div class="item-reviews__user user-reviews">
+									<div class="user-reviews__img">
+										<img
+											src="img/reviews/reviews-3.jpg"
+											alt="reviews number 3"
+										/>
+									</div>
+									<div class="user-reviews__content">
+										<div class="user-reviews__name">Leslie Alexander</div>
+										<div class="user-reviews__place">Buffalo, NJ</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="reviews__footer">
+							<div class="reviews__partners partners-reviews">
+								<div class="partners-reviews__item">
+									<img
+										src="img/reviews/partners/partners-1.png"
+										alt="partners 1"
+									/>
+								</div>
+								<div class="partners-reviews__item">
+									<img
+										src="img/reviews/partners/partners-2.png"
+										alt="partners 2"
+									/>
+								</div>
+								<div class="partners-reviews__item">
+									<img
+										src="img/reviews/partners/partners-3.png"
+										alt="partners 3"
+									/>
+								</div>
+								<div class="partners-reviews__item">
+									<img
+										src="img/reviews/partners/partners-4.png"
+										alt="partners 4"
+									/>
+								</div>
+								<div class="partners-reviews__item">
+									<img
+										src="img/reviews/partners/partners-5.png"
+										alt="partners 5"
+									/>
+								</div>
+							</div>
+							<div class="reviews__info info-reviews">
+								<div class="info-reviews__text">
+									Give us a Call
+									<a href="tel:18881112222">1-888-111-2222</a> and we can set
+									you up, or <a href="#">check our pricing plans</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="page__subscribe subscribe">
+					<div class="subscribe__container">
+						<div class="subscribe__header">
+							<h2 class="subscribe__title">Get Our Newsletter</h2>
+							<div class="subscribe__label">
+								To join the worldwide community
+							</div>
+						</div>
+						<form action="#" class="subscribe__form form-subscribe">
+							<div class="form-subscribe__inner">
+								<label for="#" class="form-subscribe__label"
+									>Type your Email Address</label
+								>
+								<input
+									type="email"
+									class="form-subscribe__input"
+									placeholder="shakir260@gmail.com"
+									required
+								/>
+							</div>
+							<button type="submit" class="form-subscribe__btn">
+								Send Now
+							</button>
+						</form>
 					</div>
 				</section>
 			</main>
